remove links from main menu items

--- a/header/header.html
+++ b/header/header.html
@@ -188,10 +188,8 @@
 <!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 
 
-<!-- JL -->
-<!--
-<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/dashboard" target="_self" class="ng-binding ng-scope" href="https://basespace.illumina.com/dashboard">Dashboard_TEST</a>
--->
+
+
 <a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/dashboard" target="_self" class="ng-binding ng-scope" href="">Dashboard_TEST</a>
 
 
@@ -203,31 +201,71 @@
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 </li><!-- end ngRepeat: li in globalHeaderListItems track by li.id --><li ng-repeat="li in globalHeaderListItems track by li.id" id="navbar-menu-item-2" ng-mouseover="moveMarker($event)" data-ng-mouseleave="slideToActive()" ng-class="{ active : isMenuButtonActive(li.id), dropdown: globalHeaderSecondaryListItems.hasOwnProperty(li.id) }" ng-switch="secondaryMenuData.hasOwnProperty(li.id)" class="ng-scope">
 <!-- non dropdown menu content -->
-<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) --><a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/lab" target="_self" class="ng-binding ng-scope" href="https://basespace.illumina.com/lab">Prep</a><!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+
+
+
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/lab" target="_self" class="ng-binding ng-scope" href="">Prep</a>
+
+
+
+<!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- drop down menu content -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 </li><!-- end ngRepeat: li in globalHeaderListItems track by li.id --><li ng-repeat="li in globalHeaderListItems track by li.id" id="navbar-menu-item-3" ng-mouseover="moveMarker($event)" data-ng-mouseleave="slideToActive()" ng-class="{ active : isMenuButtonActive(li.id), dropdown: globalHeaderSecondaryListItems.hasOwnProperty(li.id) }" ng-switch="secondaryMenuData.hasOwnProperty(li.id)" class="ng-scope">
 <!-- non dropdown menu content -->
-<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) --><a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/runs" target="_self" class="ng-binding ng-scope" href="https://basespace.illumina.com/runs">Runs</a><!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+
+
+
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/runs" target="_self" class="ng-binding ng-scope" href="">Runs</a>
+
+
+
+<!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- drop down menu content -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 </li><!-- end ngRepeat: li in globalHeaderListItems track by li.id --><li ng-repeat="li in globalHeaderListItems track by li.id" id="navbar-menu-item-4" ng-mouseover="moveMarker($event)" data-ng-mouseleave="slideToActive()" ng-class="{ active : isMenuButtonActive(li.id), dropdown: globalHeaderSecondaryListItems.hasOwnProperty(li.id) }" ng-switch="secondaryMenuData.hasOwnProperty(li.id)" class="ng-scope">
 <!-- non dropdown menu content -->
-<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) --><a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/projects" target="_self" class="ng-binding ng-scope" href="https://basespace.illumina.com/projects">Projects</a><!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+
+
+
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/projects" target="_self" class="ng-binding ng-scope" href="">Projects</a>
+
+
+
+<!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- drop down menu content -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 </li><!-- end ngRepeat: li in globalHeaderListItems track by li.id --><li ng-repeat="li in globalHeaderListItems track by li.id" id="navbar-menu-item-5" ng-mouseover="moveMarker($event)" data-ng-mouseleave="slideToActive()" ng-class="{ active : isMenuButtonActive(li.id), dropdown: globalHeaderSecondaryListItems.hasOwnProperty(li.id) }" ng-switch="secondaryMenuData.hasOwnProperty(li.id)" class="ng-scope">
 <!-- non dropdown menu content -->
-<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) --><a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/apps" target="_self" class="ng-binding ng-scope" href="https://basespace.illumina.com/apps">Apps</a><!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+
+
+
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/apps" target="_self" class="ng-binding ng-scope" href="">Apps</a>
+
+
+
+<!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- drop down menu content -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 </li><!-- end ngRepeat: li in globalHeaderListItems track by li.id --><li ng-repeat="li in globalHeaderListItems track by li.id" id="navbar-menu-item-6" ng-mouseover="moveMarker($event)" data-ng-mouseleave="slideToActive()" ng-class="{ active : isMenuButtonActive(li.id), dropdown: globalHeaderSecondaryListItems.hasOwnProperty(li.id) }" ng-switch="secondaryMenuData.hasOwnProperty(li.id)" class="ng-scope">
 <!-- non dropdown menu content -->
-<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) --><a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/datacentral" target="_self" class="ng-binding ng-scope" href="https://basespace.illumina.com/datacentral">Public Data</a><!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+<!-- ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
+
+
+
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/datacentral" target="_self" class="ng-binding ng-scope" href="">Public Data</a>
+
+
+
+<!-- end ngIf: !globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- drop down menu content -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
 <!-- ngIf: globalHeaderSecondaryListItems.hasOwnProperty(li.id) -->
