add hash mark to href because it was flickering when clicked when the string was empty

--- a/header/header.html
+++ b/header/header.html
@@ -190,7 +190,7 @@
 
 
 
-<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/dashboard" target="_self" class="ng-binding ng-scope" href="">Dashboard_TEST</a>
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/dashboard" target="_self" class="ng-binding ng-scope" href="#">Dashboard_TEST</a>
 
 
 
@@ -205,7 +205,7 @@
 
 
 
-<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/lab" target="_self" class="ng-binding ng-scope" href="">Prep</a>
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/lab" target="_self" class="ng-binding ng-scope" href="#">Prep</a>
 
 
 
@@ -219,7 +219,7 @@
 
 
 
-<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/runs" target="_self" class="ng-binding ng-scope" href="">Runs</a>
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/runs" target="_self" class="ng-binding ng-scope" href="#">Runs</a>
 
 
 
@@ -233,7 +233,7 @@
 
 
 
-<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/projects" target="_self" class="ng-binding ng-scope" href="">Projects</a>
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/projects" target="_self" class="ng-binding ng-scope" href="#">Projects</a>
 
 
 
@@ -247,7 +247,7 @@
 
 
 
-<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/apps" target="_self" class="ng-binding ng-scope" href="">Apps</a>
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/apps" target="_self" class="ng-binding ng-scope" href="#">Apps</a>
 
 
 
@@ -261,7 +261,7 @@
 
 
 
-<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/datacentral" target="_self" class="ng-binding ng-scope" href="">Public Data</a>
+<a ng-if="!globalHeaderSecondaryListItems.hasOwnProperty(li.id)" ng-href="/datacentral" target="_self" class="ng-binding ng-scope" href="#">Public Data</a>
 
 
 
