more layout rebuilding

--- a/uploader/rebuild page/index.html
+++ b/uploader/rebuild page/index.html
@@ -17,9 +17,47 @@
 			</div>
 			<div class="initialsignagecontainer">
 				<span class="heading">Drag and Drop</span> or <a href="#">Select Files</a>
+				<div class="bigline"></div>
 				<div class="cardscontainer">
 					<div class="card">
-						<img src="images/fastq.png">
+						<div class="headline">Samples</div>
+						<div class="horizontal-line"></div>
+						<div class="below">
+							<img src="images/fastq.png">
+							<div class="text">
+								File type:
+								<div class="filetypeextension-group">
+									<div class="filetypeextension">.fastq.gz</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="headline">Analyses</div>
+						<div class="horizontal-line"></div>
+						<div class="below">
+							<img src="images/vcf.png">
+							<div class="text">
+								File type:
+								<div class="filetypeextension-group">
+									<div class="filetypeextension">.vcf</div>
+									<div class="filetypeextension">.vcf.gz</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="card">
+						<div class="headline">Manifests</div>
+						<div class="horizontal-line"></div>
+						<div class="below">
+							<img src="images/txt.png">
+							<div class="text">
+								File type:
+								<div class="filetypeextension-group">
+									<div class="filetypeextension">.txt</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
